test/src/e2e_vm_tests/test_programs/should_pass/language/type_alias_basic/src/main.sw
library;

struct S {}
pub type Alias = S;
